# openai-proxy-rust

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  SYSTEM_DESIGN.md
src/: download.rs  fragments.rs  logging.rs  main.rs  metrics.rs  proxy.rs  store.rs  ui.rs  ws.rs
static/: app.js  index.html  styles.css
